# 2205A-CV

./: .gitignore  .readme.txt.swp  asdasd.txt  chen.txt  devin.txt  godv1180.txt  licence.txt  lwd.txt  readme.txt  test.txt  xqs.txt  zkl.txt  zmq.txt  zs.txt
Xqs/onnx_xqs/: onnx_infer.py
Xqs/openvino/: openvino_infer.py
Ywx/TensorRT/: coco128.yaml  dataloader.py  predict_trt_yolov5.py
Ywx/yolov5_onnx_test/: onnx_inference.py  tool.py
Ywx/yolov5n_openvino_model/: openvino_inference.py
fkm/: demo01.py  demo02.py
lwd/: lwd.txt  onnx_inference.py  transformer实现.py
lwd/flask/: cs3.py  flask_client.py  no_static_img.py  onnx_inference.py  tool.py
lwd/man/: results.avi
lwd/onnx_yolov5/: tool.py
lwd/openvino_yolov5/: openvino_tool.py  tool.py
lwd/rag/: deepseek_rag.py
lwd/tensorrt_yolov5/: common.py
lwd/trt/: dataloader.py  predict_trt_yolov5.py
lwd/wav2lip/: results.avi
lwd/语音识别/: FunASR.py  fun_asr.py
lz/: and.py  app.py  readme.txt  synthesis1.html  time.py  webpag1.html  webpage.html
lz/train2/: args.yaml  results.csv
sbz/: project_onnx.py
sbz/engine/: run.py
sbz/onnx/: tool.py
shuang/: demo.py  main.py  test.txt
whn/shuziren/: 数字人.py
whn/工单/: FunASR.py  Whisper.py
whn/数字人交互/: 1.py
wrh/: wrh
wrh/engine的/: tool.py
wrh/openvino_wrh/: openvino_inference.py  openvino_tool.py
wrh/wrh2.22/: funasr_api.py  funasr_api_test.py
wyj/: readme.txt  voice_clone.py
wyj/2.14/: .intro.txt.swp  intro.txt
wyj/Tensorrt_infer_simple/: common.py  run.py  tool.py  周月考.py
wyj/onnx_api/: README.txt  onnx_infer.py  tool.py
wyj/onnx_flask/: onnx_infer.py  tool.py
wyj/openvino_infer_simple/: openvino_infer.py  openvino_tool.py  yolov5.xml
zhj/: app.py  dd.py  index.html  数字人.py  语音重构.py  车辆检测.py
zkl/onnx_flask/: demo01.py  flask-onnx.py  flask_client（code）.py  flask_json.py
zkl/onnx_invert/: project_onnx.py  tool.py
zkl/onnx_to_openvino/: project_openvino.py
zsy/: devin.txt
zsy/cmake/yolo-interface/: CMakeLists.txt
zsy/cmake/yolo-interface/src/: cpp_tensorrt_yolo.cpp  cpp_tensorrt_yolo_v1.cpp  result.cpp  result.h
zsy/flask/: tool.py  (+3 more)
(+544 files in other folders)
